envoy-gateway/EnvoyProxy/spire/spire.yaml
# Install SPIRE and Istio following the instructions in https://github.com/zirain/playground/blob/master/istio/spire/README.md
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: eg
spec:
  gatewayClassName: eg
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      allowedRoutes:
        namespaces:
          from: All
  infrastructure:
    annotations:
      kubectl.kubernetes.io/default-container: envoy
      kubectl.kubernetes.io/default-logs-container: envoy
    parametersRef:
      group: gateway.envoyproxy.io
      kind: EnvoyProxy
      name: envoy-proxy-config
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: httpbin
  namespace: spire-sample
spec:
  parentRefs:
    - name: eg
      namespace: default
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: httpbin
          port: 8000
      matches:
        - path:
            type: PathPrefix
            value: /
---
